tests/baselines/reference/ES5For-of31.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of31.ts(3,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of31.ts (1 errors) ====
    var a: string, b: number;
    
    for ({ a: b = 1, b: a = ""} of []) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        a;
        b;
    }